[package]
name = "vuln-driver-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pelite = "0.9.0"
rayon = "1.5.1"
anyhow = "1.0.44"
itertools = "0.10.1"
walkdir = "2.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"